wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordpress
  name: wp-ingress
  annotations:
    networking.gke.io/managed-certificates: "champ"
    kubernetes.io/ingress.class: "gce"
    #networking.gke.io/v1beta1.FrontendConfig: "sslpolicy"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #kubernetes.io/ingress.global-static-ip-name: "lb-ip"
spec:
  rules:
  - host: projectchamp.info
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: wordpress
            port:
              number: 80
